Update python_programming_challenge.ipynb ayiwoma

--- a/python_programming_challenge.ipynb
+++ b/python_programming_challenge.ipynb
@@ -51,6 +51,22 @@
     "> poker_hand_ranking([\"10s\", \"10c\", \"8d\", \"10d\", \"10h\"]) ➞ \"Four of a Kind\"<br>"
    ]
   },
+```def poker_hand_ranking(hand):
+    # Convert the card values to uppercase for consistency
+    hand = [card.upper() for card in hand]
+
+    # Check for a Royal Flush
+    if all(card[0] in "AKQJ10" for card in hand) and all(card[-1] == hand[0][-1] for card in hand):
+        return "Royal Flush"
+    # Check for a Four of a Kind
+    if any(hand.count(card[0]) == 4 for card in hand):
+        return "Four of a Kind"
+
+    # Add logic to check for other combinations...
+
+    # If no combination is found, return "High Card" as the default
+    return "High Card"```
+
   {
    "cell_type": "code",
    "execution_count": null,
@@ -101,6 +117,33 @@
     "One table can have up to 10 players.\n"
    ]
   },
+```def card_value(card):
+    values = {'2': 2, '3': 3, '4': 4, '5': 5, '6': 6, '7': 7, '8': 8, '9': 9, '10': 10, 'J': 11, 'Q': 12, 'K': 13, 'A': 14}
+    return values[card[:-1]]
+
+def total_hand_value(hand):
+    card_values = [card_value(card) for card in hand]
+    return sum(card_values)
+
+def winner_is(players_hands):
+    winner = None
+    max_value = 0
+    for player, hand in players_hands.items():
+        value = total_hand_value(hand)
+        if value > max_value:
+            max_value = value
+            winner = player
+    return winner
+
+round_1 = {"John": ["10h", "Jh", "Qh", "Ah", "Kh"], 
+           "Peter": ["3h", "5h", "Qs", "9h", "Ad"]}
+round_2 = {"Stephen": ["10s", "10c", "8d", "10d", "10h"],
+           "Mary" : ["3h", "5h", "Qs", "9h", "Ad"]}
+
+winner = winner_is(round_1)
+print(winner) 
+winner = winner_is(round_2)
+print(winner)```
   {
    "cell_type": "code",
    "execution_count": null,
@@ -142,6 +185,25 @@
     "}"
    ]
   },
+```import random
+
+def distribute_cards(players):
+    suits = ['h', 'd', 'c', 's']
+    values = ['2', '3', '4', '5', '6', '7', '8', '9', '10', 'J', 'Q', 'K', 'A']
+    deck = [value + suit for value in values for suit in suits]
+    random.shuffle(deck)
+    
+    round_hands = {player: [] for player in players}
+    
+    for _ in range(5):
+        for player in players:
+            card = deck.pop()
+            round_hands[player].append(card)
+    
+    return round_hands
+distribute_cards(["John","Peter"]) 
+{'John': ['Jh', '8s', '2c', '5s', '8c'],
+ 'Peter': ['10c', 'Ac', '5c', '7d', '7h']}```
   {
    "cell_type": "code",
    "execution_count": null,
